video autoplay and footer text-alignment fixed

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,6 +21,6 @@ p{
     font-size: 21px;
     color:grey;
 }
-span.copyright{
+footer{
     text-align: right !important;
 }
